--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "mongoose": "^5.0.17"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
