--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
+    "express-graphql": "^0.6.12",
+    "graphql": "^0.13.2",
     "mongoose": "^5.0.17"
   },
   "devDependencies": {
