--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "echo 'http://localhost:8008/' && nodemon app.js"
+    "dev": "echo 'http://localhost:8008/' && nodemon app.js",
+    "ngrok": "ngrok http 8008"
   },
   "repository": {
     "type": "git",
@@ -23,14 +24,16 @@
   },
   "homepage": "https://github.com/chingu-x/chingu-connect#readme",
   "dependencies": {
+    "apollo-server-express": "^1.3.6",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
-    "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
     "graphql": "^0.13.2",
+    "graphql-import": "^0.5.2",
+    "graphql-tools": "^3.0.0",
     "mongoose": "^5.0.17",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11"
