--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "apollo-server-express": "^1.3.6",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "connect-redis": "^3.3.3",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
@@ -36,7 +37,8 @@
     "graphql-tools": "^3.0.0",
     "mongoose": "^5.0.17",
     "passport": "^0.4.0",
-    "passport-github2": "^0.1.11"
+    "passport-github2": "^0.1.11",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
