--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-airbnb-base": "^11.3.2",
     "eslint-plugin-import": "^2.7.0",
     "jest": "^22.4.3",
+    "mockingoose": "^2.9.1",
     "ngrok": "^2.2.24",
     "nodemon": "^1.14.11"
   }
