--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest",
+    "test": "jest --i",
     "test:verbose": "jest --verbose",
     "test:coverage": "jest --coverage",
     "dev": "echo 'http://localhost:8008/graphiql' && nodemon app.js",
