--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/chingu-x/chingu-connect#readme",
   "dependencies": {
+    "apollo-boost": "^0.1.6",
     "apollo-server-express": "^1.3.6",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
@@ -42,12 +43,14 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "graphql": "^0.13.2",
     "graphql-import": "^0.5.2",
+    "graphql-tag": "^2.9.2",
     "graphql-tools": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mongoose": "^5.0.17",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11",
     "react": "^16.3.2",
+    "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.3",
     "redis": "^2.8.0",
