--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:verbose": "jest -i --verbose",
     "test:coverage": "jest -i --coverage",
     "dev": "echo 'http://localhost:8008/graphiql' && NODE_ENV='dev' nodemon app.js",
+    "hack": "concurrently --kill-others \"npm run test:server\" \"npm run build:dev\"",
     "share": "ngrok http 8008",
     "build:dev": "webpack-dev-server --hot --watch --config config/webpack/webpack.dev.js",
     "build:prod": "webpack --config config/webpack/webpack.prod.js"
@@ -35,6 +36,7 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "clean-webpack-plugin": "^0.1.19",
+    "concurrently": "^3.5.1",
     "connect-redis": "^3.3.3",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
