--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "coveralls": "^3.0.1",
     "css-loader": "^0.28.11",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.3.2",
