--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build:dev": "webpack-dev-server --hot --watch --config config/webpack/webpack.dev.js",
     "build:prod": "webpack --config config/webpack/webpack.prod.js"
   },
+  "proxy": "http://localhost:8008/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chingu-x/chingu-connect.git"
@@ -51,10 +52,12 @@
     "mongoose": "^5.0.17",
     "passport": "^0.4.0",
     "passport-github2": "^0.1.11",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.3",
+    "react-router-dom": "^4.2.2",
     "redis": "^2.8.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.8.2",
