--- a/package.json
+++ b/package.json
@@ -57,8 +57,12 @@
     "react-apollo": "^2.1.4",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.3",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redis": "^2.8.0",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.8.2",
     "webpack-merge": "^4.1.2"
